--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,113 @@
 h1= title
 p Welcome to #{title}
+div.board
+	div.row
+		div.blank
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div.blank
+	div.row
+		div.blank
+		div
+		div
+		div
+		div.target
+		div.target
+		div
+		div
+		div
+		div.blank
+	div.row
+		div.blank
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div.blank
+	div.row
+		div.blank
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div.blank
+	div.row
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+	div.row
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+	div.row
+		div.blank
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div.blank
+	div.row
+		div.blank
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div.blank
+	div.row
+		div.blank
+		div
+		div
+		div
+		div.target
+		div.target
+		div
+		div
+		div
+		div.blank
+	div.row
+		div.blank
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div
+		div.blank
