--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,4 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src="/javascripts/jquery-1.8.3.js")
+    script(src="/javascripts/application.js")
   body!= body
