--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,4 @@
 h1= title
-p Welcome to #{title}
 div.board
 	div.row
 		div.blank
@@ -111,5 +110,8 @@ div.board
 		div
 		div
 		div.blank
+div.output
+	div#turn_icon Red's Turn
 	button#endturn(onclick="end()", style="display: none;") end turn
+	div#log Just testing this shit out
 	
