--- a/views/index.jade
+++ b/views/index.jade
@@ -1,117 +1,118 @@
-h1= title
-div.board
-	div.row
-		div.blank
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div.blank
-	div.row
-		div.blank
-		div
-		div
-		div
-		div.target
-		div.target
-		div
-		div
-		div
-		div.blank
-	div.row
-		div.blank
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div.blank
-	div.row
-		div.blank
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div.blank
-	div.row
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-	div.row
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-	div.row
-		div.blank
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div.blank
-	div.row
-		div.blank
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div.blank
-	div.row
-		div.blank
-		div
-		div
-		div
-		div.target
-		div.target
-		div
-		div
-		div
-		div.blank
-	div.row
-		div.blank
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div
-		div.blank
-div.output
-	div#turn_icon Red's Turn
-	button#endturn(onclick="end()", style="display: none;") end turn
-	div#log Just testing this shit out
-	
+div.container
+	h1= title
+	div.board
+		div.row
+			div.blank
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div.blank
+		div.row
+			div.blank
+			div
+			div
+			div
+			div.target
+			div.target
+			div
+			div
+			div
+			div.blank
+		div.row
+			div.blank
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div.blank
+		div.row
+			div.blank
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div.blank
+		div.row
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+		div.row
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+		div.row
+			div.blank
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div.blank
+		div.row
+			div.blank
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div.blank
+		div.row
+			div.blank
+			div
+			div
+			div
+			div.target
+			div.target
+			div
+			div
+			div
+			div.blank
+		div.row
+			div.blank
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div
+			div.blank
+	div.output
+		div#turn_icon Red's Turn
+		button#endturn(onclick="end()", style="display: none;") end turn
+		div#log Just testing this shit out
+		
