--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src="/javascripts/jquery-1.8.3.js")
+    script(src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js")
     script(src="/javascripts/application.js")
     script(src="/socket.io/socket.io.js")
     script(src="/javascripts/socket_client.js")
