--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -35,6 +35,10 @@ a {
 	float:left;
 }
 
+.row div.hover {
+   background-color: #ffff00;
+}
+
 .row div.blank{
 	background-color:#f5f5f5;
 	border:1px solid #f5f5f5;
