few more style changes

--- a/views/index.jade
+++ b/views/index.jade
@@ -112,7 +112,7 @@ div.container
 			div
 			div.blank
 	div.output
-		div#turn_icon Red's Turn
+		div#turn_icon White's Turn
 		button#endturn(onclick="end()", style="display: none;") end turn
-		div#log Just testing this shit out
+		div#log
 		
