--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -56,7 +56,7 @@ a {
 	border:1px solid #f5f5f5;
 }
 .row div.target{
-	background-color:#000000;
+	background-color:lightblue;
 }
 .row div.selected{
 	background-color:#ffff00;
@@ -92,11 +92,11 @@ a {
 }
 
 #turn_icon{
-	width:7em;
 	height:2em;
 	line-height:2em;
 	text-align:center;
-	background-color:#ff0000;
+	background-color:lightblue;
+	color: white;
 }
 
 #log{
