--- a/views/index.jade
+++ b/views/index.jade
@@ -113,6 +113,6 @@ div.container
 			div.blank
 	div.output
 		div#turn_icon White's Turn
-		button#endturn(onclick="end()", style="display: none;") end turn
+		button#endturn(onclick="end(1)", style="display: none;") end turn
 		div#log
 		
