--- a/views/index.jade
+++ b/views/index.jade
@@ -113,6 +113,8 @@ div.container
 			div.blank
 	div.output
 		div#turn_icon White's Turn
-		button#endturn(onclick="end(1)", style="display: none;") end turn
+		div#endturndiv
+			button#endturn(onclick="end(1)", style="display: none;") end turn
 		div#log
+		div#chat
 		
