set up the chat layout

--- a/views/index.jade
+++ b/views/index.jade
@@ -116,5 +116,6 @@ div.container
 		div#endturndiv
 			button#endturn(onclick="end(1)", style="display: none;") end turn
 		div#log
-		div#chat
-		
+div#chat_container
+	h1 Chat
+	div#chat what do we think?
