--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 20px;
   margin: 0 auto;
-  width: 700px;
+  width: 80%;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-color: lightblue;
 }
@@ -11,7 +11,7 @@ body {
 	padding-bottom: 100px;
 	background-color: whitesmoke;
 	float:left;
-	width: 100%;
+	width: 70%;
 }
 
 h1 {
@@ -111,6 +111,21 @@ a {
 
 /* chat */
 
-#chat {
+#chat_container {
+	width: 25%;
+	height: 521px;
+	padding: 10px;
+	padding-bottom: 100px;
+	display: inline;
+	background-color: whitesmoke;
+	float: right;
+}
 
+#chat{
+	width: 233px;
+	height: 420px;
+	padding: 10px;
+	background-color:#aaa;
+	text-align:left;
+	color: whitesmoke;
 }
