--- a/views/index.jade
+++ b/views/index.jade
@@ -118,4 +118,11 @@ div.container
 		div#log
 div#chat_container
 	h1 Chat
-	div#chat what do we think?
+	div#chat
+		ul
+			li
+				a(href='#', onclick="link_test()") Game 1
+			li
+				a(href='#', onclick="link_test()") Game 2
+			li
+				a(href='#', onclick="link_test()") Game 3
