people can join rooms and it is emitted to the room

--- a/views/index.jade
+++ b/views/index.jade
@@ -121,8 +121,8 @@ div#chat_container
 	div#chat
 		ul
 			li
-				a(href='#', onclick="link_test()") Game 1
+				a(href='#', onclick="game_choice(this)") Game 1
 			li
-				a(href='#', onclick="link_test()") Game 2
+				a(href='#', onclick="game_choice(this)") Game 2
 			li
-				a(href='#', onclick="link_test()") Game 3
+				a(href='#', onclick="game_choice(this)") Game 3
