Game does't render until two players are present

--- a/views/index.jade
+++ b/views/index.jade
@@ -115,7 +115,7 @@ div.container
 		div#turn_icon White's Turn
 		div#endturndiv
 			button#endturn(onclick="end(1)", style="display: none;") end turn
-		div#log
+		div#log Please select a game from the right
 div#chat_container
 	h1 Chat
 	div#chat
